--- a/exampleSite/content/english/event/icms2021.md
+++ b/exampleSite/content/english/event/icms2021.md
@@ -11,7 +11,7 @@ bg_image: "images/backgrounds/page-title.jpg"
 # meta description
 description : "The International Conference on Computing, Statistics and Mathematics (iCMS) is a biennial conference commencing since 2013. The conference is hosted by the Faculty of Computer and Mathematical Sciences, Universiti Teknologi MARA (UiTM) Kedah, Malaysia. The focus of iCMS is on computing, mathematics and statistics discipline and the application centering on these fields of study."
 # Event image
-image: "images/events/logo%20icms2021_edited.jpg"
+image: "images/events/icms2021-preconf-workshop.jpeg"
 # location
 location: "UiTM Kedah, Malaysia"
 # entry fee
